--- a/app/src/main/res/layout/activity_lista_servicos.xml
+++ b/app/src/main/res/layout/activity_lista_servicos.xml
@@ -34,6 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/shapebutton"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:text="Filtro" />
 
 </RelativeLayout>
