--- a/app/src/main/res/layout/fragment_feed_promocoes.xml
+++ b/app/src/main/res/layout/fragment_feed_promocoes.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fundo_degrade"
     tools:context="projetaobcc20172.com.projetopetemfoco.activity.MainActivity">
 
     <android.support.v7.widget.RecyclerView
