--- a/app/src/main/res/layout/lista_itens_promocao.xml
+++ b/app/src/main/res/layout/lista_itens_promocao.xml
@@ -28,7 +28,9 @@
         <TextView
             android:id="@+id/tv_descricao"
             android:layout_width="match_parent"
-            android:layout_height="125dp"
+            android:layout_height="wrap_content"
+            android:minHeight="80dp"
+            android:maxHeight="500dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tv_valor"
             android:gravity="center"
@@ -49,6 +51,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
+                android:gravity="center"
+                android:textColor="@color/branco" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="-"
                 android:gravity="center"
                 android:textColor="@color/branco" />
 
