Criado limitador de descrição e teste unitário do mesmo.

--- a/app/src/main/res/layout/lista_itens_promocao.xml
+++ b/app/src/main/res/layout/lista_itens_promocao.xml
@@ -29,8 +29,9 @@
             android:id="@+id/tv_descricao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="80dp"
+            android:minHeight="100dp"
             android:maxHeight="500dp"
+            android:layout_marginBottom="10dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/tv_valor"
             android:gravity="center"
