--- a/app/src/main/res/layout/activity_visualizar_promocao.xml
+++ b/app/src/main/res/layout/activity_visualizar_promocao.xml
@@ -30,7 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="350dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
 
             <ImageView
                 android:id="@+id/ivFotoDetalhesPet"
@@ -50,6 +51,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Titulo"
+                    android:layout_marginBottom="5dp"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
@@ -107,8 +109,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                android:minHeight="50dp"
                 android:text="valor"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
@@ -122,10 +124,13 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnPromocaoEst"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/shapebutton"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:text="Detalhes Estabelecimento" />
 </RelativeLayout>
