--- a/app/src/main/res/layout/lista_itens_promocao.xml
+++ b/app/src/main/res/layout/lista_itens_promocao.xml
@@ -38,6 +38,15 @@
             android:text="@string/descricao"
             android:textColor="@color/black" />
 
+        <TextView
+            android:id="@+id/tvSize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxHeight="500dp"
+            android:layout_alignBottom="@+id/tv_descricao"
+            android:layout_centerHorizontal="true"
+            android:textSize="0sp" />
+
         <LinearLayout
             android:id="@+id/LinearLayout"
             android:layout_width="match_parent"
