Solicitar a contratação de um serviço (Integração com a API do Google Calendar). Lembrete de Serviço (Integração com a API do Google). Adicionado ícones para escolher o Filtro. Retornar a tela com as informações do estabelecimento ao avaliá-lo.

--- a/app/src/main/res/layout/activity_filtro_servicos.xml
+++ b/app/src/main/res/layout/activity_filtro_servicos.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:checked="true"
             android:buttonTint="@color/colorPrimaryDark"
-            android:text="Próximidade" />
+            android:text="Proximidade" />
 
         <CheckBox
             android:id="@+id/cbAva"
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorPrimaryDark"
-            android:text="Preço" />
+            android:text="Preço (Do menor para o maior)" />
 
         <TextView
             android:id="@+id/textView4"
