--- a/app/src/main/res/layout/activity_busca_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_busca_estabelecimento.xml
@@ -13,42 +13,52 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/fundo_degrade"
+        android:orientation="horizontal">
 
         <SearchView
             android:id="@+id/svBusca"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:queryHint="@string/buscaEstabelecimento"
-            android:background="@drawable/fundo_degrade"
             android:iconifiedByDefault="false"
             android:focusable="true"
             android:focusableInTouchMode="true">
-
         </SearchView>
+
+        <ImageView
+            android:id="@+id/ivFiltro"
+            android:layout_width="40dp"
+            android:layout_height="45dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_action_filtro_preto"/>
+
+    </LinearLayout>
+
         <Button
             android:id="@+id/botao_todos_estabelecimentos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:padding="8dp"
+            android:layout_margin="8dp"
             android:background="@drawable/shapebutton"
-            android:paddingRight="20dp"
-            android:paddingLeft="10dp"
-            android:text="  Todos Estabelecimentos" />
+            android:text="Buscar Todos"
+            android:textColor="@color/branco"/>
 
         <ListView
             android:id="@+id/lvBuscaEsta"
             android:layout_width="match_parent"
-            android:layout_height="384dp"
+            android:layout_height="match_parent"
             android:padding="8dp" />
-
-        <Button
-            android:id="@+id/btnFiltroEstabelecimento"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shapebutton"
-            android:text="Filtro" />
 
     </LinearLayout>
 
