--- a/app/src/main/res/layout/activity_filtro_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_filtro_estabelecimento.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="230dp"
         android:orientation="vertical"
         android:paddingLeft="15dp"
         android:paddingRight="15dp">
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:checked="true"
             android:buttonTint="@color/colorPrimaryDark"
-            android:text="Próximidade" />
+            android:text="Proximidade" />
 
         <CheckBox
             android:id="@+id/cbAva"
