--- a/app/src/main/res/layout/busca_servico_fragment.xml
+++ b/app/src/main/res/layout/busca_servico_fragment.xml
@@ -21,14 +21,15 @@
 
         </GridView>
 
-        <Button
-            android:id="@+id/btnFiltro"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/gridServicos"
-            android:background="@drawable/shapebutton"
-            android:text="Filtro" />
+        <ImageView
+            android:id="@+id/ivFiltro"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="right"
+            android:paddingRight="10dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_action_filtro_preto"/>
+
 
     </LinearLayout>
 
