--- a/app/src/main/res/layout/lista_itens_servicos_busca.xml
+++ b/app/src/main/res/layout/lista_itens_servicos_busca.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="5dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivServicoBusca"
         android:layout_width="66dp"
         android:layout_height="66dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="2dp"
+        android:padding="3dp"
         android:layout_alignBottom="@+id/tvExibirServicoValor"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         app:civ_border_width="1dp"
         app:civ_border_color="@color/colorPrimary"
         app:srcCompat="@drawable/servico_passeio" />
