--- a/app/src/main/res/layout/lista_itens_promocao.xml
+++ b/app/src/main/res/layout/lista_itens_promocao.xml
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="#1976D2"
+            android:background="@color/colorPrimaryDark"
             android:orientation="horizontal">
 
             <TextView
