alteração do menu e da tela de busca estabelecimento, mudança na busca para adicionar fornecedores autônomos

--- a/app/src/main/res/layout/activity_busca_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_busca_estabelecimento.xml
@@ -20,22 +20,23 @@
             android:id="@+id/svBusca"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:queryHint="@string/buscaEstabelecimento"
             android:background="@drawable/fundo_degrade"
-            android:iconifiedByDefault="false"
             android:focusable="true"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:iconifiedByDefault="false"
+            android:queryHint="Nome do fornecedor">
 
         </SearchView>
+
         <Button
             android:id="@+id/botao_todos_estabelecimentos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/shapebutton"
-            android:paddingRight="20dp"
             android:paddingLeft="10dp"
-            android:text="  Todos Estabelecimentos" />
+            android:paddingRight="20dp"
+            android:text="  Todos fornecedores" />
 
         <ListView
             android:id="@+id/lvBuscaEsta"
