--- a/app/src/main/res/layout/lista_estabelecimentos_busca.xml
+++ b/app/src/main/res/layout/lista_estabelecimentos_busca.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/ivFornecedorImg"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginLeft="20dp"
