--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -26,29 +26,6 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <Button
-            android:id="@+id/bt_salvar_favorito"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Favoritar"
-            android:visibility="visible" />
-
-        <Button
-            android:id="@+id/bt_remover_favorito"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Desfavoritar"
-            android:visibility="invisible" />
-
-        <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -82,7 +59,7 @@
                 android:id="@+id/botao_mostrar_avaliacoes_estabelecimento"
                 android:layout_width="45dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="100dp"
+                android:layout_marginLeft="60dp"
                 android:background="@drawable/ic_action_avaliacoes"
                 android:text="Avaliar" />
 
@@ -90,9 +67,18 @@
                 android:id="@+id/botao_avaliar_estabelecimento"
                 android:layout_width="45dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="60dp"
+                android:layout_marginLeft="50dp"
                 android:background="@drawable/ic_action_avaliar"
                 android:text="Avaliar" />
+
+            <ImageButton
+                android:id="@+id/bt_salvar_favorito"
+                android:layout_width="20dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="35dp"
+                android:layout_weight="1"
+                android:background="@drawable/ic_action_favoritar_true" />
 
         </LinearLayout>
 
@@ -104,7 +90,7 @@
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="90dp"
+                android:layout_marginLeft="40dp"
                 android:text="Avaliações"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
@@ -115,6 +101,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="35dp"
                 android:text="Avaliar"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="9dp"
+                android:text="Favoritar"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -138,9 +133,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:text="@string/email"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textSize="16sp" />
 
             <View
                 android:layout_width="match_parent"
@@ -154,9 +149,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:text="@string/telefone"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textSize="16sp" />
 
             <View
                 android:layout_width="match_parent"
@@ -170,9 +165,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:text="@string/horario"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textSize="16sp" />
 
             <View
                 android:layout_width="match_parent"
@@ -184,12 +179,12 @@
                 android:id="@+id/tvEnderecoEstabelecimento"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Endereço:"
                 android:gravity="center"
-                android:textColor="@android:color/black"
+                android:text="Endereço:"
                 android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/black"
                 android:textSize="16sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvEnderecoEstabelecimentoCombinado"
@@ -197,9 +192,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Endereco:"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
             <com.google.android.gms.maps.MapView
@@ -215,9 +210,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/servicos"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold" />
 
         </LinearLayout>
