[#152261486 #152340555] Acesso a partir da tela de Meus Favoritos e remoção de estabelecimentos favoritos está sendo realizados com sucesso.

--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -78,7 +78,8 @@
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="35dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_action_favoritar_true" />
+                android:background="@drawable/ic_action_favoritar_false"
+                android:visibility="invisible" />
 
         </LinearLayout>
 
