--- a/app/src/main/res/layout/lista_favoritos.xml
+++ b/app/src/main/res/layout/lista_favoritos.xml
@@ -27,4 +27,16 @@
         android:textColor="@android:color/black"
         android:textSize="14sp" />
 
+
+    <ImageButton
+        android:id="@+id/bt_remover_favorito"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_weight="1"
+        android:background="@drawable/ic_action_remover_favorito" />
+
 </RelativeLayout>
