--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -34,8 +34,7 @@
             <ImageView
                 android:id="@+id/ivFotoDetalhesPet"
                 android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:background="@drawable/estabelecimentos"/>
+                android:layout_height="70dp" />
 
             <TextView
                 android:id="@+id/tvExibeNomeEstabelecimento"
