--- a/app/src/main/res/layout/fragment_resumo_contratacao.xml
+++ b/app/src/main/res/layout/fragment_resumo_contratacao.xml
@@ -106,18 +106,18 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:text="Quantidade"
+                        android:text="Valor de Serviço"
                         android:textSize="18sp"
                         android:textColor="#444"
                         android:fontFamily="sans-serif-medium"/>
 
                     <TextView
-                        android:id="@+id/tv_amount"
+                        android:id="@+id/tv_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
                         android:layout_alignParentRight="true"
-                        android:text="2"
+                        android:text="R$3.200,00"
                         android:textSize="18sp"
                         android:textColor="#666"
                         android:fontFamily="sans-serif"/>
@@ -132,22 +132,23 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:text="Valor Unitário"
+                        android:text="Valor de desconto"
                         android:textSize="18sp"
                         android:textColor="#444"
                         android:fontFamily="sans-serif-medium"/>
 
                     <TextView
-                        android:id="@+id/tv_price"
+                        android:id="@+id/tv_cupom"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
                         android:layout_alignParentRight="true"
-                        android:text="R$3.200,00"
+                        android:text="R$ 0,00"
                         android:textSize="18sp"
                         android:textColor="#666"
                         android:fontFamily="sans-serif"/>
@@ -311,15 +312,78 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            app:cardElevation="4dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="Cupom de desconto"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:fontFamily="sans-serif-medium"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/et_AdicionarCupom"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="12dp"
+                        android:ems="10"
+                        android:hint="Digite seu cupom"
+                        android:inputType="text" />
+
+                    <Button
+                        android:id="@+id/btn_validarCupom"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="11dp"
+                        android:backgroundTint="@color/grey2"
+                        android:text="Validar Cupom"
+                        android:textColor="@android:color/white" />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
         <Button
             android:id="@+id/bt_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirmar"
             android:layout_alignParentBottom="true"
-            android:backgroundTint="@color/colorPrimary"
             android:layout_margin="10dp"
-            android:textColor="@android:color/white"/>
+            android:backgroundTint="@color/colorPrimary"
+            android:text="Confirmar"
+            android:textColor="@android:color/white" />
+
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
