--- a/app/src/main/res/layout/activity_filtro_servicos.xml
+++ b/app/src/main/res/layout/activity_filtro_servicos.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="@drawable/fundo_degrade">
 
+    <ProgressBar
+        android:id="@+id/pbProgressoFiltro"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+    </ProgressBar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="330dp"
@@ -52,6 +59,13 @@
             android:layout_height="wrap_content"
             android:buttonTint="@color/colorPrimaryDark"
             android:text="Preço (Do menor para o maior)" />
+
+        <CheckBox
+            android:id="@+id/cbProxMinhaResidencia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/colorPrimaryDark"
+            android:text="Próximo Minha Residência" />
 
         <TextView
             android:id="@+id/textView4"
