--- a/app/src/main/res/layout/fragment_feed_promocoes.xml
+++ b/app/src/main/res/layout/fragment_feed_promocoes.xml
@@ -5,10 +5,25 @@
     android:layout_height="match_parent"
     android:background="@drawable/fundo_degrade"
     tools:context="projetaobcc20172.com.projetopetemfoco.activity.MainActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
+        android:orientation="vertical">
+
+        <ImageView
+        android:id="@+id/ivOpcoesPromocao"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:adjustViewBounds="false"
+        android:paddingRight="10dp"
+        android:src="@drawable/ic_action_filtro_preto" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
+    </LinearLayout>
+
 </RelativeLayout>
