--- a/app/src/main/res/layout/activity_opcoes_promocoes.xml
+++ b/app/src/main/res/layout/activity_opcoes_promocoes.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/fundo_degrade"
-    android:padding="0dp"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="projetaobcc20172.com.projetopetemfoco.activity.OpcoesPromocoes">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@drawable/fundo_degrade">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="330dp"
