--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="projetaobcc20172.com.projetopetemfoco.activity.AcessoInformacoesEstabelecimentoActivity">
+    tools:context="projetaobcc20172.com.projetopetemfoco.activity.ExibiInformacoesEstabelecimentoActivity">
 
     <include
         android:id="@+id/tb_acesso_infomacoes_estabelecimento"
@@ -57,29 +57,29 @@
 
             <ImageButton
                 android:id="@+id/botao_mostrar_avaliacoes_estabelecimento"
-                android:layout_width="45dp"
+                android:layout_width="55dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="60dp"
-                android:background="@drawable/ic_action_avaliacoes"
+                android:layout_marginLeft="50dp"
+                android:background="@drawable/ic_avaliacoes_novo"
                 android:text="Avaliar" />
 
             <ImageButton
                 android:id="@+id/botao_avaliar_estabelecimento"
-                android:layout_width="45dp"
+                android:layout_width="35dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="50dp"
-                android:background="@drawable/ic_action_avaliar"
+                android:layout_marginLeft="55dp"
+                android:background="@drawable/ic_avaliar_new"
                 android:text="Avaliar" />
 
             <ImageButton
                 android:id="@+id/bt_salvar_favorito"
                 android:layout_width="20dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="50dp"
+                android:layout_marginLeft="60dp"
                 android:layout_marginRight="35dp"
                 android:layout_weight="1"
                 android:background="@drawable/ic_action_favoritar_false"
-                android:visibility="invisible" />
+                android:visibility="visible" />
 
         </LinearLayout>
 
