--- a/app/src/main/res/layout/activity_meus_favoritos.xml
+++ b/app/src/main/res/layout/activity_meus_favoritos.xml
@@ -10,6 +10,9 @@
         android:id="@+id/lv_meus_favoritos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="8dp"
         android:padding="8dp">
 
     </ListView>
