--- a/app/src/main/res/layout/activity_busca_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_busca_estabelecimento.xml
@@ -7,9 +7,10 @@
 
     <ProgressBar
         android:id="@+id/pbProgresso"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"></ProgressBar>
+        android:layout_height="wrap_content" >
+    </ProgressBar>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,6 +30,7 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:iconifiedByDefault="false"
+                android:background="@drawable/fundo_degrade"
                 android:queryHint="@string/buscaEstabelecimento"></SearchView>
 
             <ImageView
@@ -51,7 +53,7 @@
             android:background="@drawable/shapebutton"
             android:padding="8dp"
             android:text="Buscar Todos"
-            android:textColor="@color/branco" />
+            android:textColor="@color/branco"/>
 
         <ListView
             android:id="@+id/lvBuscaEsta"
