--- a/app/src/main/res/layout/fragment_resumo_contratacao.xml
+++ b/app/src/main/res/layout/fragment_resumo_contratacao.xml
@@ -137,7 +137,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:text="Valor de desconto"
+                        android:text="Desconto"
                         android:textSize="18sp"
                         android:textColor="#444"
                         android:fontFamily="sans-serif-medium"/>
