Revert "Merge Pull do Master"
This reverts commit 8c15489ac3ae87769736526947b03b73129533cf, reversing
changes made to 2cc7520d3cd040e2110d18fa2776bcb791b88ced.

--- a/app/src/main/res/layout/activity_avaliar_servico.xml
+++ b/app/src/main/res/layout/activity_avaliar_servico.xml
@@ -118,6 +118,7 @@
                 android:background="@drawable/shapebutton"
                 android:paddingRight="20dp"
                 android:paddingLeft="10dp"
+                android:drawableLeft="@drawable/ic_action_favoritos"
                 android:text="  Avaliar" />
 
         </LinearLayout>
