--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="projetaobcc20172.com.projetopetemfoco.activity.AcessoInformacoesEstabelecimentoActivity">
+    tools:context="projetaobcc20172.com.projetopetemfoco.activity.ExibiInformacoesEstabelecimentoActivity">
 
     <include
         android:id="@+id/tb_acesso_infomacoes_estabelecimento"
@@ -72,12 +72,47 @@
 
             <ImageButton
                 android:id="@+id/bt_salvar_favorito"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
+                android:layout_width="20dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="35dp"
                 android:layout_weight="1"
-                android:background="@drawable/ic_action_favoritar_true" />
+                android:background="@drawable/ic_action_favoritar_false"
+                android:visibility="visible" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:text="Avaliações"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="35dp"
+                android:text="Avaliar"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="9dp"
+                android:text="Favoritar"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
         </LinearLayout>
 
