--- a/app/src/main/res/layout/lista_favoritos.xml
+++ b/app/src/main/res/layout/lista_favoritos.xml
@@ -7,24 +7,46 @@
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/tvTituloMeusFavoritos"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        android:paddingTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp" />
+        android:paddingRight="8dp"
+        android:paddingTop="8dp"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tvSubtituloMeusFavoritos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_alignStart="@+id/tvTituloMeusFavoritos"
         android:layout_below="@+id/tvTituloMeusFavoritos"
         android:paddingBottom="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:textColor="@android:color/black"
         android:textSize="14sp" />
+
+    <ImageButton
+        android:id="@+id/bt_ligar_favorito"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="70dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/ic_action_telefone"
+        android:gravity="center"/>
+
+    <ImageButton
+        android:id="@+id/bt_remover_favorito"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/ic_action_remover_favorito"
+        android:gravity="center"/>
 
 </RelativeLayout>
