--- a/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
+++ b/app/src/main/res/layout/activity_acesso_informacoes_estabelecimento.xml
@@ -57,17 +57,18 @@
 
             <ImageButton
                 android:id="@+id/botao_mostrar_avaliacoes_estabelecimento"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:background="@drawable/ic_action_avaliacoes"
+                android:layout_width="55dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="50dp"
+                android:background="@drawable/ic_avaliacoes_novo"
                 android:text="Avaliar" />
 
             <ImageButton
                 android:id="@+id/botao_avaliar_estabelecimento"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginLeft="40dp"
-                android:background="@drawable/ic_action_avaliar"
+                android:layout_width="35dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="55dp"
+                android:background="@drawable/ic_avaliar_new"
                 android:text="Avaliar" />
 
             <ImageButton
